// Generated file
import "ccsds_mal/types.proto";



package pusGroundModel.protobuf;

message Pus011TimeShift {
extensions 3 to 103;

  optional ccsds_mal.protobuf.TIME applicationTime = 1;
  optional ccsds_mal.protobuf.INTEGER timeShiftOffset = 2;
}
